--- a/viewer/pom.xml
+++ b/viewer/pom.xml
@@ -93,6 +93,16 @@
 			<artifactId>flowable-spring-boot-starter-process</artifactId>
 			<version>7.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.flowable</groupId>
+			<artifactId>flowable-spring-boot-starter-cmmn</artifactId>
+			<version>7.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.flowable</groupId>
+			<artifactId>flowable-cmmn-spring-configurator</artifactId>
+			<version>7.0.1</version>
+		</dependency>
 	</dependencies>
     
     <dependencyManagement>
