--- a/risk-service/src/main/resources/application.properties
+++ b/risk-service/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=false
