--- a/viewer/src/main/resources/application.properties
+++ b/viewer/src/main/resources/application.properties
@@ -26,5 +26,8 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=false
 
 # Force clean DB on startup to ensure data.sql runs fresh
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
 spring.sql.init.continue-on-error=true
+# spring.jpa.hibernate.ddl-auto=create-drop # Can conflict with manual schema.sql
