UI enhancements and backend screening mapping configuration

--- a/screening-service/src/main/resources/application.properties
+++ b/screening-service/src/main/resources/application.properties
@@ -11,11 +11,11 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
 # Batch Screening Configuration
-batch.work.dir=/tmp/screening-batch
+batch.work.dir=batch-work
 batch.sftp.upload.dir=upload
 batch.sftp.download.dir=download
-batch.publicKeyPath=/tmp/screening-batch/pubring.gpg
-batch.privateKeyPath=/tmp/screening-batch/secring.gpg
+batch.publicKeyPath=batch-work/pubring.gpg
+batch.privateKeyPath=batch-work/secring.gpg
 batch.passphrase=password
 
 # SFTP Configuration
