Force all services to register as localhost in Eureka

--- a/viewer/src/main/resources/application.properties
+++ b/viewer/src/main/resources/application.properties
@@ -24,6 +24,7 @@ app.jwtExpirationInMs=3600000
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=false
+eureka.instance.hostname=localhost
 
 # Force clean DB on startup to ensure data.sql runs fresh
 spring.sql.init.mode=always
