--- a/document-service/src/main/resources/application.properties
+++ b/document-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=document-service
 server.port=8085
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=false
+eureka.instance.hostname=localhost
 
 
 spring.datasource.url=jdbc:h2:mem:testdb
