--- a/risk-service/src/main/resources/application.properties
+++ b/risk-service/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.h2.console.enabled=true
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=false
+eureka.instance.hostname=localhost
