Fix Gateway routes to use lowercase service IDs

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -12,29 +12,29 @@ spring:
           lower-case-service-id: true
       routes:
         - id: risk-service
-          uri: lb://RISK-SERVICE
+          uri: lb://risk-service
           predicates:
             - Path=/api/risk/**, /api/internal/risk/**
           filters:
             - RewritePath=/api/risk/(?<remaining>.*), /api/internal/risk/${remaining}
         - id: screening-service
-          uri: lb://SCREENING-SERVICE
+          uri: lb://screening-service
           predicates:
             - Path=/api/screening/**, /api/internal/screening/**
           filters:
             - RewritePath=/api/screening/(?<remaining>.*), /api/internal/screening/${remaining}
         - id: auth-service
-          uri: lb://AUTH-SERVICE
+          uri: lb://auth-service
           predicates:
             - Path=/auth/**, /api/auth/**, /api/users/**, /api/permissions/**
           filters:
             - RewritePath=/api/auth/(?<remaining>.*), /auth/${remaining}
         - id: document-service
-          uri: lb://DOCUMENT-SERVICE
+          uri: lb://document-service
           predicates:
             - Path=/api/documents/**
         - id: core-viewer
-          uri: lb://VIEWER-CORE
+          uri: lb://viewer-core
           predicates:
             - Path=/api/**, /login, /logout, /
             # Fallback for UI assets ??
@@ -42,7 +42,7 @@ spring:
             # If Viewer moves to 8083, Gateway at 8080 must proxy EVERYTHING deeper.
             # So Path=/** might be needed as a catch-all route to Viewer.
         - id: core-viewer-catchall
-          uri: lb://VIEWER-CORE
+          uri: lb://viewer-core
           predicates:
             - Path=/**
 
