Refactor Risk Service for granular batch processing and add Visual Pipeline UI

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -11,24 +11,34 @@ spring:
           enabled: true
           lower-case-service-id: true
       routes:
-#        - id: risk-service
-#          uri: lb://risk-service
-#          predicates:
-#            - Path=/api/risk/**, /api/internal/risk/**
-#          filters:
-#            - RewritePath=/api/risk/(?<remaining>.*), /api/internal/risk/${remaining}
-#        - id: screening-service
-#          uri: lb://screening-service
-#          predicates:
-#            - Path=/api/screening/**, /api/internal/screening/**
-#          filters:
-#            - RewritePath=/api/screening/(?<remaining>.*), /api/internal/screening/${remaining}
-#        - id: auth-service
-#          uri: lb://auth-service
-#          predicates:
-#            - Path=/auth/**, /api/auth/**, /api/users/**, /api/permissions/**
-#          filters:
-#            - RewritePath=/api/auth/(?<remaining>.*), /auth/${remaining}
+        - id: risk-service
+          uri: lb://risk-service
+          predicates:
+            - Path=/api/risk/**
+          filters:
+            - RewritePath=/api/risk/(?<remaining>.*), /api/internal/risk/${remaining}
+        - id: screening-service-batch
+          uri: lb://screening-service
+          predicates:
+            - Path=/api/internal/screening/**
+          # Direct pass-through for batch controller
+        - id: screening-service-legacy
+          uri: lb://screening-service
+          predicates:
+            - Path=/api/screening/**
+          filters:
+            - RewritePath=/api/screening/(?<remaining>.*), /api/internal/screening/${remaining}
+        - id: auth-service-login
+          uri: lb://auth-service
+          predicates:
+            - Path=/api/auth/**
+          filters:
+            - StripPrefix=1
+        - id: auth-service-api
+          uri: lb://auth-service
+          predicates:
+            - Path=/api/users/**, /api/permissions/**
+          # No StripPrefix for these, as controllers are mapped to /api/...
 #        - id: document-service
 #          uri: lb://document-service
 #          predicates:
