--- a/risk-service/src/main/resources/application.properties
+++ b/risk-service/src/main/resources/application.properties
@@ -11,7 +11,18 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
+spring.sql.init.mode=always
+spring.sql.init.platform=h2
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=false
 eureka.instance.hostname=localhost
+
+# SFTP Configuration
+sftp.host=localhost
+sftp.port=22
+sftp.user=user
+sftp.password=password
+batch.work.dir=/tmp/risk-batch
+batch.sftp.upload.dir=upload
+sftp.enabled=false
